忽略结果文件

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: 小蟹iOS混淆工具
-description: iOS confuse
+description: iOS confuse, 解决 AppStore 4.3 工具，机审问题，支持swift/objc/c/c++/objc++
 
 theme: null
 
