--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,4 +1,5 @@
-source "https://rubygems.org" # source "https://gems.ruby-china.com"
+source "https://rubygems.org" 
+#source "https://gems.ruby-china.com"
 
 gemspec
 
